src/tests/snapshots/cargo_vet__tests__store_parsing__all_empty.snap
---
source: src/tests/store_parsing.rs
expression: acquire_errors
---

  × Failed to parse toml file
  ╰─▶ missing field `audits`
   ╭─[audits.toml:1:1]
 1 │ 
   · ▲
   · ╰── here
   ╰────

