src/tests/snapshots/cargo_vet__tests__store_parsing__distant_future_end_date.snap
---
source: src/tests/store_parsing.rs
expression: acquire_errors
---
  × Your cargo-vet store (supply-chain) has consistency errors

Error: 
  × '2024-05-15' is more than a year in the future
   ╭─[audits.toml:8:7]
 7 │ start = "2015-05-15"
 8 │ end = "2024-05-15"
   ·       ────────────
 9 │ 
   ╰────
  help: wildcard audits must end at most a year in the future (2024-01-01)
