src/tests/snapshots/cargo_vet__tests__store_parsing__invalid_criteria_map.snap
---
source: src/tests/store_parsing.rs
expression: acquire_errors
---

  × Your cargo-vet store (supply-chain) has consistency errors

Error: 
  × Built-in criteria 'safe-to-deploy' cannot be re-mapped when importing
    ╭─[config.toml:12:1]
 12 │ ours = "safe-to-run"
 13 │ theirs = "safe-to-deploy"
    ·          ────────────────
    ╰────
  help: built-in criteria are always imported unmodified (see issue #425)

