src/tests/snapshots/cargo_vet__tests__store_parsing__outdated_imports_lock_excluded_crate.snap
---
source: src/tests/store_parsing.rs
expression: acquire_errors
---
  × Your cargo-vet store (supply-chain) has consistency errors

Error:   × imports.lock is out-of-date with respect to configuration
  help: run `cargo vet` without --locked to update imports

