src/tests/snapshots/cargo_vet__tests__store_parsing__unknown_field_audit.snap
---
source: src/tests/store_parsing.rs
expression: acquire_errors
---
  × Failed to parse toml file: unknown field `unknown-field`, expected one of
  │ `who`, `criteria`, `version`, `delta`, `violation`, `importable`, `notes`,
  │ `aggregated-from`
   ╭─[audits.toml:7:1]
 6 │ version = "2.0.0"
 7 │ unknown-field = "invalid"
   · ──────┬──────
   ·       ╰── here
   ╰────
