src/tests/snapshots/cargo_vet__tests__store_parsing__unknown_field_criteria.snap
---
source: src/tests/store_parsing.rs
expression: acquire_errors
---
  × Failed to parse toml file: unknown field `unknown-field`, expected one of
  │ `description`, `description-url`, `implies`, `aggregated-from`
   ╭─[audits.toml:7:1]
 6 │ implies = "safe-to-deploy"
 7 │ unknown-field = "invalid"
   · ──────┬──────
   ·       ╰── here
 8 │ 
   ╰────
